# docs/swagger.json
@@ -16,6 +16,11 @@
     "paths": {
         "/api/v1/account/": {
             "get": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "User balance",
                 "consumes": [
                     "application/json"
@@ -26,7 +31,7 @@
                 "tags": [
                     "api/v1/account"
                 ],
-                "summary": "Balance",
+                "summary": "balance",
                 "parameters": [
                     {
                         "description": "user_id",
@@ -62,7 +67,12 @@
         },
         "/api/v1/account/deposit/": {
             "post": {
-                "description": "Deposit by userId",
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "description": "deposit by userId",
                 "consumes": [
                     "application/json"
                 ],
@@ -72,7 +82,7 @@
                 "tags": [
                     "api/v1/account/deposit"
                 ],
-                "summary": "Deposit",
+                "summary": "deposit",
                 "parameters": [
                     {
                         "description": "user_id, amount",
@@ -108,6 +118,11 @@
         },
         "/api/v1/reservation/create": {
             "post": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "create new reservation",
                 "consumes": [
                     "application/json"
@@ -139,6 +154,132 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/internal_controller_http_v1.ErrorOutput"
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "schema": {
+                            "$ref": "#/definitions/internal_controller_http_v1.ErrorOutput"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/internal_controller_http_v1.ErrorOutput"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/reservation/refund": {
+            "post": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "description": "refund",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "api/v1/reservation/refund"
+                ],
+                "summary": "refund",
+                "parameters": [
+                    {
+                        "description": "ID NO NEED",
+                        "name": "reservation",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_ArtemRotov_account-balance-manager_internal_model.Reservation"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/internal_controller_http_v1.refundOutput"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/internal_controller_http_v1.ErrorOutput"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/internal_controller_http_v1.ErrorOutput"
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "schema": {
+                            "$ref": "#/definitions/internal_controller_http_v1.ErrorOutput"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/internal_controller_http_v1.ErrorOutput"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/reservation/revenue": {
+            "post": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "description": "recognizes revenue",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "api/v1/reservation/revenue"
+                ],
+                "summary": "revenue",
+                "parameters": [
+                    {
+                        "description": "ID NO NEED",
+                        "name": "reservation",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_ArtemRotov_account-balance-manager_internal_model.Reservation"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/internal_controller_http_v1.revenueOutput"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/internal_controller_http_v1.ErrorOutput"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/internal_controller_http_v1.ErrorOutput"
                         }
@@ -369,6 +510,24 @@
                 "user_id": {
                     "type": "integer",
                     "example": 1
+                }
+            }
+        },
+        "internal_controller_http_v1.refundOutput": {
+            "type": "object",
+            "properties": {
+                "msg": {
+                    "type": "string",
+                    "example": "OK"
+                }
+            }
+        },
+        "internal_controller_http_v1.revenueOutput": {
+            "type": "object",
+            "properties": {
+                "msg": {
+                    "type": "string",
+                    "example": "OK"
                 }
             }
         },
